<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="com.netforceinfotech.eclipseexpress.dashboard.dashboardcontentnew.DashboardFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/greydark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expressdeal"
                        android:textColor="@color/colorPrimary" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/greydark" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerExpressDeal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/greydark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bestselling"
                        android:textColor="@color/colorPrimary" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/greydark" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerBestSelling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/greydark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expresscollection"
                        android:textColor="@color/colorPrimary" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/greydark" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerEclipseExpressCollection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/greydark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trendingstyle"
                        android:textColor="@color/colorPrimary" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/greydark" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerTrendingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/greydark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allsale"
                        android:textColor="@color/colorPrimary" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/greydark" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerAllSale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/max_height_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@color/white"
                android:clipToPadding="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearlayouthead"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="60"
                        android:scaleType="centerCrop"
                        android:src="@drawable/david" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="240dp"
                        android:layout_weight="40"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="48dp"
                            android:text="New Collection"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="Out Now!"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonDiscover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="Discover"
                    android:textColor="@color/colorText" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="@color/grey"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relativeLayoutSearch"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/border_white_bg"
                    android:elevation="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_search" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/text"
                        android:text="@string/search"
                        android:textColor="@color/colorPrimaryText" />

                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    </FrameLayout>


</FrameLayout>
